--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
-    "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.11"
+    "zustand": "^5.0.11",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "@types/node": "^20",
