--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0",
+    "tailwind-merge": "^3.4.1",
     "tailwindcss": "^3.4.19",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.182.0",
     "zustand": "^5.0.11"
   },
