--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "framer-motion": "^12.34.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.564.0",
-    "next": "16.1.6",
+    "next": "^16.1.6",
     "postcss": "^8.5.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.1",
     "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
